# JSONator

./: .strizzle.h.swp  CMakeLists.txt  a.out  jsonator.c  jsonator.h  main.c  profile.json  strizzle.h  strizzle.h.pch
src/: jsonator.c  jsonator.h  main.c  stack.h  stringbuilder.h
